// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Brand should render correctly with link not provided 1`] = `
.emotion-0 {
  background-color: #B80000;
  min-height: 2.75rem;
  width: 100%;
  padding: 0 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (min-width: 15rem) {
  .emotion-0 {
    min-height: 3.75rem;
    padding: 0 0.5rem;
  }
}

@media (min-width: 25rem) {
  .emotion-0 {
    min-height: 3.75rem;
    padding: 0 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    min-height: 4rem;
  }
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 63rem;
  margin: 0 auto;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="brand-svg-wrapper emotion-2 emotion-3"
    >
      <img
        alt="Default Brand Name"
        aria-hidden="true"
        focusable="false"
        height="30"
        id="brandSvgHeader"
        src="/news/images/brandLogo.svg"
        style="margin-left: 0.5px;"
      />
      <span
        class="emotion-4"
        id="BrandLink-null"
        role="text"
      >
        <span
          lang="en-GB"
        >
          Default Brand Name, 
        </span>
        <span>
          Service
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Brand should render correctly with link provided 1`] = `
.emotion-0 {
  background-color: #B80000;
  min-height: 2.75rem;
  width: 100%;
  padding: 0 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (min-width: 15rem) {
  .emotion-0 {
    min-height: 3.75rem;
    padding: 0 0.5rem;
  }
}

@media (min-width: 25rem) {
  .emotion-0 {
    min-height: 3.75rem;
    padding: 0 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    min-height: 4rem;
  }
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 63rem;
  margin: 0 auto;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
}

.emotion-4 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 2.625rem;
}

.emotion-4:hover::before,
.emotion-4:focus::before {
  content: '';
  position: absolute;
  inset: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-4:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0px -0.5rem;
  outline: 0.25rem solid #FFFFFF;
  outline-offset: -0.25rem;
}

.emotion-6 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="brand-svg-wrapper emotion-2 emotion-3"
    >
      <a
        aria-labelledby="BrandLink-null"
        class="brand-link focusIndicatorRemove emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <img
          alt="Default Brand Name"
          aria-hidden="true"
          focusable="false"
          height="30"
          id="brandSvgHeader"
          src="/news/images/brandLogo.svg"
          style="margin-left: 0.5px;"
        />
        <span
          class="emotion-6"
          id="BrandLink-null"
          role="text"
        >
          <span
            lang="en-GB"
          >
            Default Brand Name, 
          </span>
          <span>
            Service
          </span>
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Brand should render correctly with no service Localised Name 1`] = `
.emotion-0 {
  background-color: #B80000;
  min-height: 2.75rem;
  width: 100%;
  padding: 0 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (min-width: 15rem) {
  .emotion-0 {
    min-height: 3.75rem;
    padding: 0 0.5rem;
  }
}

@media (min-width: 25rem) {
  .emotion-0 {
    min-height: 3.75rem;
    padding: 0 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    min-height: 4rem;
  }
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 63rem;
  margin: 0 auto;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="brand-svg-wrapper emotion-2 emotion-3"
    >
      <img
        alt="BBC News"
        aria-hidden="true"
        focusable="false"
        height="30"
        id="brandSvgHeader"
        src="/news/images/brandLogo.svg"
        style="margin-left: 0.5px;"
      />
      <span
        class="emotion-4"
        id="BrandLink-null"
      >
        BBC News
      </span>
    </div>
  </div>
</div>
`;
